# leapMotionController

./: README.md  setup.py
leapMotionController/: __init__.py  pyLMController.pyx
leapMotionController/cLMController/: CMakeLists.txt
leapMotionController/cLMController/include/: LMController.h
leapMotionController/cLMController/src/: LMController.cpp
leapMotionController/cLMController/test/: LMController_test.cpp  main.cpp
tutorials/: test.py
